[package]
name = "csharp-mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
bytemuck = { version = "1.14.0", features = ["derive"] }
asr = { git = "https://github.com/knutwalker/asr", branch = "new-derive", features = [
    "unity",
] }

[features]
alloc = []
